# TenzikCore

./: .gitignore  README.md
tenzik-core/: Cargo.toml  MIGRATION_NOTES.md  README.md  SPRINT_1_COMPLETE.md  demo.bat  demo.sh
tenzik-core/capsules/templates/hello-world/: README.md  capsule.ts  package.json  test.wat
tenzik-core/crates/adapters/: Cargo.toml
tenzik-core/crates/adapters/src/: http_server.rs  lib.rs  webhook_router.rs
tenzik-core/crates/cli/: Cargo.toml
tenzik-core/crates/cli/src/: main.rs
tenzik-core/crates/cli/src/commands/: mod.rs  node.rs  test.rs
tenzik-core/crates/federation/: Cargo.toml
tenzik-core/crates/federation/src/: gossip.rs  lib.rs  node.rs  storage.rs
tenzik-core/crates/protocol/: Cargo.toml
tenzik-core/crates/protocol/src/: dag.rs  errors.rs  events.rs  lib.rs
tenzik-core/crates/runtime/: Cargo.toml
tenzik-core/crates/runtime/src/: execution.rs  lib.rs  receipts.rs  sandbox.rs  validation.rs
tenzik-core/docs/architecture/: runtime-design.md
tenzik-core/docs/progress/: completion-log.md  sprint-1.md  sprint-2.md
tenzik-core/examples/two-node-demo/: README.md  demo.bat  demo.sh
