[workspace]
members = [
    "crates/runtime",
    "crates/protocol", 
    "crates/federation",
    "crates/cli",
    "crates/adapters"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tenzik Team"]
license = "Apache-2.0"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# WASM runtime
wasmtime = { version = "26.0", features = ["async"] }

# Cryptography
blake3 = "1.5"
ed25519-dalek = "2.1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Federation/Storage  
sled = "0.34"
libp2p = "0.54"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
