[package]
name = "tenzik-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tenzik protocol types and DAG federation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
