[package]
name = "tenzik-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tenzik WASM runtime with security sandbox"

[dependencies]
wasmtime = { workspace = true, features = ["async"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
rand = "0.8"
